# neurolearn

./: .gitignore  AGENTS.FLOW.md  AGENTS.INVARIANTS.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: transcribe.md
.githooks/: pre-push
.github/workflows/: test.yml
assets/: demo.tape
commands/: setup.md  transcribe.md
docs/: ARCHITECTURE.md  BACKENDS.md  BENCHMARKS.md  CLAUDE_CODE.md  INSTALL.md  TROUBLESHOOTING.md  UNLIMITED_RESEARCH.md  USAGE.md  USE_CASES.md  agent-reference.md  cookies-walkthrough.md
docs/plans/: 2026-05-08-youtube-transcribe.md  2026-05-10-youtube-transcribe-v02.md  2026-05-11-youtube-transcribe-v06-analyze.md  2026-05-12-youtube-transcribe-v07-research-subscribes.md
docs/research/: youtube-ip-block-bypass-2026.md  yt-dlp-throttle-and-cookies-2026.md
docs/specs/: 2026-05-08-neurolearn-design.md  2026-05-08-youtube-transcribe-design.md  2026-05-09-youtube-transcribe-v01-batch-extension-design.md  2026-05-10-youtube-transcribe-v02-visual-mode-design.md  2026-05-12-youtube-transcribe-v07-research-subscribes-design.md  v0.17-subscribes-shorts.md
graphify-out/: GRAPH_REPORT.md  graph.json
scripts/: check_version_sync.py  qa.sh
skills/neurolearn/: SKILL.md  __init__.py  budget.py  config.py  constants.py  frames_cmd.py  pipeline.py  pipeline_v02.py  transcribe.py  vision_report_cmd.py  wizard.py
skills/neurolearn/analyze/: backend_resolver.py  chunked_runner.py  prompt_builder.py  runner.py
skills/neurolearn/backends/: factory.py  gemini.py  groq.py  subtitles.py  whisper_local.py
skills/neurolearn/detection/: base.py  matcher.py  moment_kind.py  triggers_cli.py  window_merge.py
skills/neurolearn/history/: cli.py
skills/neurolearn/memory/: __init__.py  cli.py  learn.py  store.py
skills/neurolearn/presets/: loader.py  registry.py
skills/neurolearn/presets/data/: presets_default.toml
skills/neurolearn/quality/: asr_corrector.py  summarizer.py  translator.py
skills/neurolearn/report/: __init__.py  _macos.py  grounding.py  orchestrator.py  outliner.py  renderer.py
skills/neurolearn/research/: pipeline.py  translator.py
skills/neurolearn/shared/: llm_screen.py
skills/neurolearn/subscribes/: _sync_hook.py  channel_resolver.py  cli.py  cookies_onboarding.py  instagram_loader.py  pipeline.py  store.py
skills/neurolearn/utils/: anti_block_cascade.py  audio_chunker.py  console.py  cookies_freshness.py  downloader.py  hallucination_filter.py  output_writer.py  platform_errors.py  po_token.py
skills/neurolearn/vision/: frames.py  gemini.py  groq_vision.py  openai_vision.py  prompts.py
skills/neurolearn/vision/data/: prompts_default.toml
skills/neurolearn/webui/: app.py
skills/youtube_transcribe/: SKILL.md  __init__.py  config.py  pipeline.py  pipeline_v02.py  transcribe.py  wizard.py
skills/youtube_transcribe/analyze/: backend_resolver.py  picker.py  prompt_builder.py  runner.py  source_resolver.py
skills/youtube_transcribe/backends/: assemblyai.py  base.py  custom.py  deepgram.py  factory.py  gemini.py  groq.py  openai_api.py  subtitles.py  vision_base.py  whisper_local.py
skills/youtube_transcribe/detection/: __init__.py  llm_classify.py  matcher.py  triggers.py  triggers_cli.py  window_merge.py
skills/youtube_transcribe/detection/data/: triggers_default.toml
skills/youtube_transcribe/history/: cli.py  store.py
skills/youtube_transcribe/presets/: __init__.py  loader.py  registry.py
skills/youtube_transcribe/presets/data/: presets_default.toml
skills/youtube_transcribe/quality/: __init__.py  asr_corrector.py  base.py  boh.py  diarization.py  heuristic_checker.py  perplexity.py  repetition.py  summarizer.py
skills/youtube_transcribe/quality/data/: boh_phrases.txt
skills/youtube_transcribe/research/: pipeline.py  source.py  translator.py
skills/youtube_transcribe/shared/: llm_screen.py
skills/youtube_transcribe/subscribes/: channel_resolver.py  cli.py  cookies_onboarding.py  instagram_loader.py  pipeline.py  rss.py  state.py
skills/youtube_transcribe/utils/: downloader.py  output_writer.py  resolver.py  transcript_loader.py
skills/youtube_transcribe/vision/: __init__.py  claude_vision.py  gemini.py
skills/youtube_transcribe/webui/: __init__.py  app.py
tests/: conftest.py  test_analyze_backend_resolver.py  test_analyze_chunked_runner.py  test_analyze_output.py  test_analyze_prompt_builder.py  test_analyze_runner.py  test_analyze_scaffolding.py  test_analyze_select_parser.py  test_analyze_source_resolver.py  test_anti_block_cascade.py  test_asr_corrector.py  test_asr_ollama.py  test_audio_chunker.py  test_backend_assemblyai.py  test_backend_custom.py  test_backend_deepgram.py  test_backend_gemini.py  test_backend_groq.py  test_base.py  test_batch_cli_compat_flags.py  test_batch_finalize_on_crash.py  test_batch_pipeline_refactor.py  test_batch_then_analyze.py  test_budget.py  test_claude_extract_mode.py  test_cli.py  test_cli_analyze.py  test_cli_batch.py  test_cli_batch_v02_wiring.py  test_cli_correct_asr.py  test_cli_interactive_prompts.py  test_cli_research.py  test_cli_subscribes.py  test_cli_summarize.py  test_cli_v02_flags.py  test_cli_v03_filters.py  test_cli_v03_skip_existing.py  test_cli_v03_workers.py  test_cli_visual_wiring.py  test_config.py  (+120 more)
tests/data/: quality_golden.json  sample_rss.xml
tests/scenarios/: README.md  run_v015_fixes.py
