[project]
name = "neurolearn"
version = "0.23.1"
description = "NEUROLEARN — learn from videos. Transcribe / analyze / research / subscribe to YouTube, Instagram, TikTok and local media via 8 interchangeable backends (Whisper local / subtitles / Gemini / Groq / OpenAI / Deepgram / AssemblyAI / custom)."
readme = "README.md"
# Upper bound `<3.14` is required by `scenedetect` 0.7 (no wheels for Python 3.14
# as of 2026-05). Lift this when scenedetect adds 3.14 support.
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "NEUROLEARN contributors" }]
keywords = ["whisper", "transcription", "youtube", "instagram", "tiktok", "research", "subscribes", "claude-code", "skill"]

dependencies = [
    "click>=8.1",
    "rich>=13.7",
    # tomllib is stdlib on Python ≥3.11 — no `tomli` shim needed since requires-python = ">=3.11"
    "tomli-w>=1.0",
    "python-dotenv>=1.0",
    "yt-dlp>=2024.10.0",
    # v0.15.0: PO Token (Proof of Origin) plugin auto-registers with yt-dlp
    # at import time. Without it, YouTube increasingly returns "Sign in to
    # confirm you're not a bot" even on first request from a fresh IP.
    # The plugin generates the per-session token YouTube expects from a
    # real browser. Needs Node.js 16+ at runtime; if Node is missing the
    # plugin logs a warning and yt-dlp degrades to no-PO-Token (graceful).
    "bgutil-ytdlp-pot-provider>=1.3",
    # v0.15.3: TLS-fingerprint impersonation for yt-dlp. YouTube increasingly
    # distinguishes bot traffic by ClientHello fingerprint (separate from
    # cookies and PO Token). yt-dlp's `impersonate=` extractor option uses
    # curl_cffi to spoof real Chrome/Firefox TLS — without it you get
    # "no impersonate target is available" warnings + 429 errors on
    # endpoints (especially subtitles) that anti-bot the TLS layer.
    # yt-dlp 2026.03.17 supports curl_cffi 0.5.10 OR 0.10.x-0.14.x.
    # Pinning to 0.10-0.15 catches the modern supported range; 0.15+
    # raises "Only curl_cffi versions X.Y are supported" at import.
    "curl_cffi>=0.10,<0.15",
    "youtube-transcript-api>=0.6.2",
    # Cloud SDKs (small, install all by default)
    "google-genai>=1.0.0",                 # 0.x had unstable API; we target the stable Client/files/models pattern
    "groq>=0.11.0",
    "openai>=1.50.0",
    "deepgram-sdk>=7.0.0",                 # 7.x rewrote the API (client.listen.v1.media.transcribe_file); 3.x/4.x not supported by our backend
    "assemblyai>=0.34.0",
    # v0.12.0: removed `anthropic` from base deps. Anthropic SDK is no
    # longer used as a backend API client (see memory feedback_no_anthropic_api).
    # Claude integration happens through Claude Code chat (user's subscription)
    # not through anthropic.Anthropic() calls in our pipeline.

    # Local Whisper — Windows/Linux/Intel-Mac path
    # NOT installed on macOS arm64: faster-whisper 1.2+ requires onnxruntime
    # which has no wheels for macOS arm64. On Apple Silicon, use mlx-whisper
    # (see spec §5.2: platform_detect picks mlx on arm64-darwin).
    "faster-whisper>=1.0.3; sys_platform != 'darwin' or platform_machine != 'arm64'",
    # Apple Silicon path (only installs on macOS arm64)
    "mlx-whisper>=0.4.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # === v0.2: Quality check ===
    "pyspellchecker>=0.8.0",
    "pyahocorasick>=2.1.0",
    "langdetect>=1.0.9",
    # === v0.2: Triggers (multilingual) ===
    "sentence-transformers>=3.0.0",
    "lemminflect>=0.2.3",
    "pymorphy3>=2.0.2",
    # === v0.2: Triggers CLI (preserve comments in TOML) ===
    "tomlkit>=0.13.0",
    # === v0.6: interactive picker for `analyze` command ===
    "questionary>=2.0",
    # === v0.2: Detection ===
    "scenedetect>=0.6.4",
    "imagehash>=4.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # Single-command version bump across all 5 places the version string
    # lives (pyproject + __init__ + 3 plugin-manifest JSON fields). Config
    # lives in [tool.bumpversion] below. Added after the Claude Code plugin
    # auto-update broke twice from a forgotten manifest bump.
    "bump-my-version>=1.0",
]

# OCR — opt-in. Pytesseract requires system `tesseract` binary
# (brew install tesseract / apt-get install tesseract-ocr).
# easyocr — fallback, heavy (60MB models), but no system deps.
ocr = [
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
]

# Perplexity — opt-in. Uses transformers directly (already pulled by
# sentence-transformers core dep). On first call downloads GPT-2 small
# (~500 MB) for English; non-English languages skip the brick.
# No new dep — listed here so user can `--extra perplexity` to indicate intent
# (currently a no-op marker; future multilingual models may add real deps).
perplexity = []

# Web UI — opt-in. Gradio + uvicorn together pull ~100 MB. Launches via
# `neurolearn webui` and binds to 127.0.0.1 by default.
webui = [
    "gradio>=4.0.0",
]

# Speaker diarization — opt-in. pyannote.audio requires HuggingFace
# token AND license acceptance for the model at
# https://huggingface.co/pyannote/speaker-diarization-3.1.
# Heavy: pulls torchaudio + pretrained model on first use (~500 MB).
diarization = [
    "pyannote.audio>=3.0.0",
]

# Instagram fallback — opt-in. Used by `subscribes update` when yt-dlp's
# Instagram extractor is broken upstream (happens periodically).
# Pure Python, ~5 MB total. See feedback_cookies_strict_file_only.md
# memory rule: this tool reads only the Netscape cookies.txt file the
# user registered, not their full browser cookie store.
instagram = [
    "instaloader>=4.13",
]

# PDF report generation — opt-in. WeasyPrint renders HTML→PDF (LGPL,
# free). Needs cairo / pango system libs on macOS (brew install pango)
# and Linux (apt install libpango-1.0-0 libpangoft2-1.0-0). On Windows
# WeasyPrint additionally requires GTK runtime. The `report` extra
# bundles the Python side; system libs are installed once by the user
# following the on-demand hint printed by `neurolearn report`.
report = [
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "markdown>=3.6",
]

[project.scripts]
neurolearn = "skills.neurolearn.transcribe:cli"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skills"]
include = [
    "skills/neurolearn/presets/data/*.toml",
    "skills/neurolearn/vision/data/*.toml",
    "skills/neurolearn/report/data/*.toml",
    "skills/neurolearn/report/data/templates/*.html",
    "skills/neurolearn/report/data/templates/*.css",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

# ============================================================================
# Version bumping — single source of truth across all 5 places.
# ============================================================================
# The version string physically lives in 5 spots: this file, the package
# __init__, and THREE fields across two plugin-manifest JSONs. Hand-syncing
# them broke the Claude Code plugin auto-update twice (a manifest field was
# forgotten). `bump-my-version` updates all 5 in one command:
#
#     uv run bump-my-version bump patch      # 0.17.1 → 0.17.2
#     uv run bump-my-version bump minor      # 0.17.1 → 0.18.0
#     uv run bump-my-version bump major      # 0.17.1 → 1.0.0
#
# It then auto-commits and tags (commit + tag = true below). The release
# flow becomes: bump → `git push && git push --tags` → `gh release create`.
# Dry-run before trusting a new pattern: `uv run bump-my-version bump patch
# --dry-run --verbose`.
[tool.bumpversion]
current_version = "0.23.1"
# Refuse to run on a dirty tree — keeps stray graphify-out/ or AGENTS.* edits
# out of the release commit. Stage/clean those first.
allow_dirty = false
commit = true
tag = true
tag_name = "v{new_version}"
commit_message = "chore: bump version {current_version} → {new_version}"
tag_message = "v{new_version}"

# --- Place 1: pyproject [project] version ---
# Context-anchored to the line after `name = "neurolearn"` so it can't
# accidentally match `current_version` in this very section.
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = '''name = "neurolearn"
version = "{current_version}"'''
replace = '''name = "neurolearn"
version = "{new_version}"'''

# --- Place 2: runtime __version__ ---
[[tool.bumpversion.files]]
filename = "skills/neurolearn/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

# --- Place 3: plugin.json ---
[[tool.bumpversion.files]]
filename = ".claude-plugin/plugin.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

# --- Place 4: marketplace.json top-level version ---
# Anchored by the following `"plugins": [` line — unique to the top-level
# field; the nested one is followed by `"source"` instead.
[[tool.bumpversion.files]]
filename = ".claude-plugin/marketplace.json"
search = '''"version": "{current_version}",
  "plugins": ['''
replace = '''"version": "{new_version}",
  "plugins": ['''

# --- Place 5: marketplace.json nested plugin version ---
# Anchored by the following `"source": {` line — unique to the nested field.
[[tool.bumpversion.files]]
filename = ".claude-plugin/marketplace.json"
search = '''"version": "{current_version}",
      "source": {{'''
replace = '''"version": "{new_version}",
      "source": {{'''
